--- a/carpatianknights/account/templates/account/RN_login.html
+++ b/carpatianknights/account/templates/account/RN_login.html
@@ -2,7 +2,7 @@
 
 {% block title %}Log-in{% endblock %}
 
-{% block content %}
+{% block account_content %}
     <h1>Log-in</h1>
     <p>Please, use the following form to log-in:</p>
     <form action="." method="post">
