--- a/carpatianknights/account/templates/registration/login.html
+++ b/carpatianknights/account/templates/registration/login.html
@@ -2,13 +2,14 @@
 
 {% block title %}Log-in{% endblock %}
 
-{% block content %}
+{% block account_content %}
     <h1>Log-in</h1>
     {% if form.errors %}
         <p>Your username and password didn't match.Please try again.</p>
     {% else %}
         <p>Please, use the following form to log-in. If you don't have an account <a href="{% url "register" %}">register
             here</a></p>
+            <p>Your email is username</p>
     {% endif %}
     <div class="login-form">
         <form action="{% url 'login' %}" method="post">
@@ -26,11 +27,11 @@
 {#            <li class="twitter">#}
 {#                <a href="{% url "social:begin" "twitter" %}">Login with Twitter</a>#}
 {#            </li>#}
-            <li class="google">
+            {% comment %} <li class="google">
                 <a href="{% url "social:begin" "google-oauth2" %}">
                     Login with Google
                 </a>
-            </li>
+            </li> {% endcomment %}
         </ul>
     </div>
 {% endblock %}
