--- a/carpatianknights/account/templates/registration/password_change_form.html
+++ b/carpatianknights/account/templates/registration/password_change_form.html
@@ -2,7 +2,7 @@
 
 {% block title %}Change you password{% endblock %}
 
-{% block content %}
+{% block account_content %}
     <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
     <form action="." method="post">
