--- a/carpatianknights/account/templates/registration/login.html
+++ b/carpatianknights/account/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}Особистий кабінет{% endblock %}
 
 {% block account_content %}
     <h1>Log-in</h1>
