--- a/carpatianknights/news/templates/news/base.html
+++ b/carpatianknights/news/templates/news/base.html
@@ -47,9 +47,9 @@
             {% comment %} <li class="nav-item">
                 <a href="/OurTeam"><span>Наша команда</span></a>
             </li> {% endcomment %}
-            {% comment %} <li class="nav-item">
-                <a href="/Archive"><span>Архіваріум походів</span></a>
-            </li> {% endcomment %}
+            <li class="nav-item">
+                <a href="/route"><span>Наші маршрути</span></a>
+            </li>
             <li class="nav-item">
                 <a href="/active_tours"><span>Актуальні походи</span></a>
             </li>
