--- a/carpatianknights/news/templates/tour/active_tours.html
+++ b/carpatianknights/news/templates/tour/active_tours.html
@@ -14,10 +14,10 @@
             {% comment %} <!-- {/*<div className="bar" style={{width: "100px"}}></div>*/} --> {% endcomment %}
             <p>Сладність: {{ active_tour.routes_id.complexity }}</p>
             {% comment %} <progress value="{{ active_tour.routes_id.complexity }}"></progres> {% endcomment %}
-            <div class="active_tour_description">{{ active_tour.routes_id.description|markdown }}</div>
+            <div class="active_tour_description">{{ active_tour.routes_id.short_description|markdown }}</div>
             <div class="active_tour_image">
                 {% for tour_image in active_tour.routes_id.photos.all %}
-                    <img src="{{ tour_image.get_url }}" alt="">
+                    <img src="{{ tour_image.image.url }}" alt="">
                 {% endfor %}
             </div>
             {% fontawesome_stylesheet %}
