add front_end app and move all static files there

--- a/carpatianknights/account/templates/base.html
+++ b/carpatianknights/account/templates/base.html
@@ -1,4 +1,4 @@
-{% extends "news/base.html" %}
+{% extends "news/../../front/templates/base.html" %}
 {% load static %}
 {% comment %} <!DOCTYPE html>
 <html>
