--- a/carpatianknights/front_end/static/scss/layouts/_l-person-block.scss
+++ b/carpatianknights/front_end/static/scss/layouts/_l-person-block.scss
@@ -1,7 +1,7 @@
 .person-block {
   width: 100vw;
   height: 100%;
-  background: url("../../../images/team-bg.jpg") no-repeat center fixed;
+  background: url("../../../../news/images/team-bg.jpg") no-repeat center fixed;
   background-size: cover;
   position: relative;
   padding: 17vh 0;
