--- a/carpatianknights/front_end/static/scss/layouts/_l-rules-list.scss
+++ b/carpatianknights/front_end/static/scss/layouts/_l-rules-list.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   height: auto;
   background-repeat: no-repeat;
-  background-image: url("../../../images/rules-bg.jpg");
+  background-image: url("../../../../news/images/rules-bg.jpg");
   background-size: cover;
   position: relative;
   //overflow: auto;
