--- a/carpatianknights/news/templates/tour/active_tours.html
+++ b/carpatianknights/news/templates/tour/active_tours.html
@@ -1,4 +1,4 @@
-{% extends "news/base.html" %}
+{% extends "news/../../../front/../../../front_end/templates/base.html" %}
 {% load active_tour_tags %}
 {% load static %}
 {% load fontawesome %}
