--- a/carpatianknights/news/templates/tour/route_detail.html
+++ b/carpatianknights/news/templates/tour/route_detail.html
@@ -1,4 +1,4 @@
-{% extends "news/base.html" %}
+{% extends "news/../../../front/../../../front_end/templates/base.html" %}
 {% load news_tags %}
 {% block title %}{{ route.name }}{% endblock %}
 {% block content %}
