--- a/carpatianknights/front_end/static/scss/main.css
+++ b/carpatianknights/front_end/static/scss/main.css
@@ -781,7 +781,7 @@ footer p {
   width: 100vw;
   height: auto;
   background-repeat: no-repeat;
-  background-image: url("../../../images/rules-bg.jpg");
+  background-image: url("../../../../news/images/rules-bg.jpg");
   background-size: cover;
   position: relative;
   padding: 0;
@@ -905,7 +905,7 @@ footer p {
 .person-block {
   width: 100vw;
   height: 100%;
-  background: url("../../../images/team-bg.jpg") no-repeat center fixed;
+  background: url("../../../../news/images/team-bg.jpg") no-repeat center fixed;
   background-size: cover;
   position: relative;
   padding: 17vh 0;
