moved route app from news and moved main page and model Photo to front_end app

--- a/carpatianknights/account/templates/account/register.html
+++ b/carpatianknights/account/templates/account/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Create an account{% endblock %}
 {% block account_content %}
     <h1>Create an account</h1>
