--- a/carpatianknights/account/templates/account_base.html
+++ b/carpatianknights/account/templates/account_base.html
@@ -1,4 +1,4 @@
-{% extends "news/../../front/templates/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% comment %} <!DOCTYPE html>
 <html>
