--- a/carpatianknights/account/templates/account/register_done.html
+++ b/carpatianknights/account/templates/account/register_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Welcome{% endblock %}
 {% block account_content %}
     <h1>Welcome {{ new_user.first_name }}!</h1>
