--- a/carpatianknights/account/templates/registration/password_change_done.html
+++ b/carpatianknights/account/templates/registration/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Password changed{% endblock %}
 {% block account_content %}
     <h1>Password changed</h1>
