--- a/carpatianknights/account/templates/registration/password_reset_complete.html
+++ b/carpatianknights/account/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Password reset{% endblock %}
 {% block account_content %}
     <h1>Password set</h1>
