--- a/carpatianknights/account/templates/registration/password_reset_confirm.html
+++ b/carpatianknights/account/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "account_base.html" %}
 {% block title %}Reset your password{% endblock %}
 {% block account_content %}
     <h1>Reset your password</h1>
