--- a/carpatianknights/route/templates/route/route_detail.html
+++ b/carpatianknights/route/templates/route/route_detail.html
@@ -1,4 +1,4 @@
-{% extends "news/../../../front/../../../front_end/templates/base.html" %}
+{% extends "base.html" %}
 {% load news_tags %}
 {% block title %}{{ route.name }}{% endblock %}
 {% block content %}
