remove django-fontawesome package

--- a/carpatianknights/front_end/templates/base.html
+++ b/carpatianknights/front_end/templates/base.html
@@ -44,7 +44,7 @@
                 <a href="/route"><span>Наші маршрути</span></a>
             </li>
             <li class="nav-item">
-                <a href="/active_tours"><span>Актуальні походи</span></a>
+                <a href="/route/active_tours"><span>Актуальні походи</span></a>
             </li>
             <li class="nav-item">
                 <a href="/account"><span>Особистий кабінет</span></a>
