--- a/carpatianknights/account/templates/account/dashboard.html
+++ b/carpatianknights/account/templates/account/dashboard.html
@@ -1,20 +1,19 @@
 {% extends "account_base.html" %}
+{% load static %}
 
-{% block title %}З поверненням, {{user.first_name|title}}! {% endblock %}
+{% block title %}З поверненням, {{ user.first_name|title }}! {% endblock %}
 
 {% block account_content %}
-    
+
     <div class="account_tour">
         <div class="confirm_tours">
-            {% for tour in confirm_tour %}
-                {% if forloop.first  %}
-                    <h2>Зарєстровані Маршрути</h2>
-                {% endif %}
+            <h2>Зарєстровані Маршрути</h2>
+            {% for tour in user_active_tour %}
                 <div class="confirm_tours_card">
                     <h3>{{ tour.active_route_id.routes_id.name }}</h3>
                     <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
                     <p>Провідник: {{ tour.active_route_id.leader }}</p>
-                    {% if tour.status  %}
+                    {% if tour.status %}
                         <h2>Статус заявки : Підтверджено</h2>
                     {% else %}
                         <h2>Статус заявки : Прийнято, очікуйте на підтвердження.</h2>
@@ -22,6 +21,16 @@
                 </div>
             {% empty %}
                 <p>Ви ще не зареєстровані ні на один похід</p>
+            {% endfor %}
+        </div>
+        <div class="history_tour">
+            <h2>Історія сходжень</h2>
+            {% for tour in user_history_tour %}
+                <h3>{{ tour.active_route_id.routes_id.name }}</h3>
+                <p>{{ tour.active_route_id.start_day|date:"d.m" }}-{{ tour.active_route_id.stop_day|date:"d.m.Y" }}</p>
+                <p>Провідник: {{ tour.active_route_id.leader }}</p>
+            {% empty %}
+                <p>Ви ще не пройшли ні кілометру з нами</p>
             {% endfor %}
         </div>
 
@@ -36,17 +45,25 @@
             </div>
         </div>
         <div class="tour_history">
-        
+
         </div>
     </div>
     <div class="account_profile">
-         <div class="some">
+        <div class="some">
+            <img src="{% if user.profile.photo %}
+                            {{ user.profile.photo.url }}
+                       {% else %}
+                            {% static "images/avatar-1577909_960_720.webp" %}{% endif %}">
+            <p>Успішних маршрутів: {{ user_history_tour.count }}</p>
+            <p>User rank: {{ user.profile.user_rang }}</p>
+            <p>На сайті з {{ user.profile.date_of_registration|date:"d.m.Y" }}</p>
             <p>You can also <a href="{% url "edit" %}">edit your profile</a> or
-            <a href="{% url "password_change" %}">change your password</a>.<p>
-            <a href="{% url "logout" %}">Logout</a>
+                <a href="{% url "password_change" %}">change your password</a>.
+            <p>
+                <a href="{% url "logout" %}">Logout</a>
         </div>
     </div>
-    
-   
-   
+
+
+
 {% endblock %}
