--- a/carpatianknights/front_end/static/scss/main.scss
+++ b/carpatianknights/front_end/static/scss/main.scss
@@ -1,7 +1,25 @@
 
-//@import "~normalize-scss/sass/normalize";
-@import "base/base";
+//Custom vars
+@import "base/custom-bootstrap-vars";
+//Plugins
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/reboot";
+@import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/utilities/display";
+@import "node_modules/bootstrap/scss/utilities/flex";
+@import "node_modules/bootstrap/scss/utilities/spacing";
+@import "node_modules/bootstrap/scss/utilities/sizing";
+@import "node_modules/bootstrap/scss/utilities/text";
+@import "node_modules/bootstrap/scss/utilities/position";
+
+@import "node_modules/slick-carousel/slick/slick.scss";
+@import "node_modules/slick-carousel/slick/slick-theme.scss";
 @import "utilities/colors";
+@import "base/fonts";
+@import "base/base";
+
 //Global
 @import "layouts/l-header";
 @import "layouts/l-footer";
@@ -18,9 +36,6 @@
 
 //News
 @import "layouts/l-news-block";
-
-//Rules list
-@import "layouts/l-rules-list";
 
 //Crusade
 @import "layouts/l-active-tours";
