--- a/carpatianknights/news/templates/news/post/list.html
+++ b/carpatianknights/news/templates/news/post/list.html
@@ -4,7 +4,14 @@
     <div class="headers-container"><h2>Новини</h2></div>
     <div>
         <div class="news-container">
+            {% if tag %}
+                <h2>Posts tagged with "{{ tag.name }}"</h2>
+            {% endif %}
             <div class="container">
+                <form action="" method="get">
+                    {{ my_filter.form }}
+                    <button type="submit">Застосувати</button>
+                </form>
                 {% for post in posts %}
                     <div class="news-card-container">
                         <div class="news-card">
@@ -17,6 +24,13 @@
                             <button class="button_news" id="{{ post.id }}">
                                 <a href="{{ post.get_absolute_url }}">Детальніше</a>
                             </button>
+                            Tags:
+                            {% for tag in post.tags.all %}
+                                <a href="{% url 'news:post_list_by_tag' tag.slug %}">
+                                    {{ tag.name }}
+                                </a>
+                                {% if not forloop.last %}, {% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                 {% endfor %}
