--- a/carpatianknights/front_end/static/scss/base/_custom-bootstrap-vars.scss
+++ b/carpatianknights/front_end/static/scss/base/_custom-bootstrap-vars.scss
@@ -1,10 +1,10 @@
-$grid-breakpoints: (
-        xs: 0,
-        xsm: 480px,
-        sm: 576px,
-        md: 768px,
-        lg: 992px,
-        xl: 1200px,
-        xxl: 1440px,
-        max-xl: 1600px
-) !default;
+//$grid-breakpoints: (
+//        xs: 0,
+//        xsm: 480px,
+//        sm: 576px,
+//        md: 768px,
+//        lg: 992px,
+//        xl: 1200px,
+//        xxl: 1440px,
+//        max-xl: 1600px
+//) !default;
