--- a/carpatianknights/front_end/static/scss/utilities/_colors.scss
+++ b/carpatianknights/front_end/static/scss/utilities/_colors.scss
@@ -1,6 +1,6 @@
-$main-bg-color: #292929;
+$main-bg-color: #343a40;
 $main-section-color: #e0e0e0;
 $main-black-text: #404040;
 
-$green-color-light: #004d4d;
-$green-color-dark: #003A27;
+$primary-color-light: #004d4d;
+$primary-color-dark: #003A27;
