--- a/carpatianknights/front_end/static/scss/layouts/_l-about-us.scss
+++ b/carpatianknights/front_end/static/scss/layouts/_l-about-us.scss
@@ -1,12 +1,13 @@
 .about-us {
   padding: 50px 15px;
-  background-color: $main-section-color;
+  background-color: $main-bg-color;
+
   h2 {
-    color: $green-color-light;
+    //color: $primary-color-light;
   }
 
   p {
-    max-width: 75vmax;
-    margin: 0 auto 25px auto;
+    //max-width: 75vmax;
+    //margin: 0 auto 25px auto;
   }
 }
