--- a/carpatianknights/front_end/static/scss/base/_base.scss
+++ b/carpatianknights/front_end/static/scss/base/_base.scss
@@ -14,7 +14,16 @@ main {
   line-height: 26px;
 }
 
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .container-wrapper {
+
+}
+
+.perspective-container {
   perspective: 400px;
 }
 
