--- a/carpatianknights/front_end/templates/shared/_footer.html
+++ b/carpatianknights/front_end/templates/shared/_footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>2014 - {{ year|date:"Y" }} - Всі права збережені. Жека недокодив.</p>
+    <p class="text-white">2014 - {{ year|date:"Y" }} - Всі права збережені. Жека Трап кодив.</p>
 </footer>
