--- a/carpatianknights/news/templates/news/post/list.html
+++ b/carpatianknights/news/templates/news/post/list.html
@@ -9,7 +9,7 @@
             {% endif %}
             <div class="container">
                 <form action="" method="get">
-                    {{ my_filter.form }}
+                    {{ post_filter.form }}
                     <button type="submit">Застосувати</button>
                 </form>
                 {% for post in posts %}
