add section carousel and small fix menu

--- a/carpatianknights/front_end/templates/main.html
+++ b/carpatianknights/front_end/templates/main.html
@@ -6,8 +6,8 @@
 
     {% include 'homepage/hero-banner.html' %}
     {% include 'homepage/about-us.html' %}
-    {% include 'homepage/our-partners.html' %}
-    {% include 'homepage/statistic.html' %}
-
+{#    {% include 'homepage/our-partners.html' %}#}
+{#    {% include 'homepage/statistic.html' %}#}
+    {% include 'homepage/carousel.html' %}
 
 {% endblock %}
