--- a/carpatianknights/front_end/templates/base.html
+++ b/carpatianknights/front_end/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
     <title>{% block title %}{% endblock %}</title>
 
-<link type="text/css" href="{% static 'index.css' %}" rel="stylesheet">
+    <link type="text/css" href="{% static 'index.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="container-wrapper">
