--- a/carpatianknights/news/templates/news/post/list.html
+++ b/carpatianknights/news/templates/news/post/list.html
@@ -6,46 +6,56 @@
     <div class="headers-container"><h2>Новини</h2></div>
     <div>
         <div class="news-container">
-            {% if tag %}
-                <h2>Posts tagged with "{{ tag.name }}"</h2>
-            {% endif %}
-            <div class="container mb-5 ">
-                <form class="row row-cols-lg-auto g-3 align-items-end">
+            <div class="container mb-5">
+                {% if tag %}
+                    <h2>Новини з тегом - "{{ tag.name }}"</h2>
+                {% endif %}
+            </div>
+            <div class="container mb-5">
+                <form class="row row-cols-lg-auto g-3 align-items-end filter-form-container">
                     <div class="col-12">
-                        <label for="{{ post_filter.form.name.id_for_label }}">Заголовок містить</label>
+                        <label class="col-12 col-form-label text-center" for="{{ post_filter.form.name.id_for_label }}">Заголовок
+                            містить</label>
                         {% render_field post_filter.form.name class+="form-control" %}
                     </div>
                     <div class="col-12">
-                        <label for="{{ post_filter.form.start_date.id_for_label }}">Дата більше</label>
+                        <label class="col-12 col-form-label text-center"
+                               for="{{ post_filter.form.start_date.id_for_label }}">Дата більше</label>
                         {% render_field post_filter.form.start_date class+="form-control" type="date" %}
                     </div>
                     <div class="col-12">
-                        <label for="{{ post_filter.form.end_date.id_for_label }}">Дата менше</label>
-                        {% render_field post_filter.form.end_date class+="form-control" type="date"%}
+                        <label class="col-12 col-form-label text-center"
+                               for="{{ post_filter.form.end_date.id_for_label }}">Дата менше</label>
+                        {% render_field post_filter.form.end_date class+="form-control" type="date" %}
                     </div>
-                    <button type="submit" class="btn btn-secondary">Застосувати</button>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-secondary">Застосувати</button>
+                    </div>
+
                 </form>
             </div>
             <div class="container">
                 {% for post in posts %}
                     <div class="news-card-container">
                         <div class="news-card">
-                            <p class="title">{{ post.title }}</p>
+                            <p class="title">{{ post.title|truncatechars:30 }}</p>
                             <span class="news-date">{{ post.publish|date:"d-m-Y" }}</span>
                             <div class="describe-block">
                                 {{ post.body|markdown|truncatewords_html:40 }}
                                 <p>{{ post.author }}</p>
                             </div>
-                            <button class="button_news" id="{{ post.id }}">
+                            <button class="btn button_news" id="{{ post.id }}">
                                 <a href="{{ post.get_absolute_url }}">Детальніше</a>
                             </button>
-                            Tags:
-                            {% for tag in post.tags.all %}
-                                <a href="{% url 'news:post_list_by_tag' tag.slug %}">
-                                    {{ tag.name }}
-                                </a>
-                                {% if not forloop.last %}, {% endif %}
-                            {% endfor %}
+                            <div class="news-tag-container">
+                                Tags:
+                                {% for tag in post.tags.all %}
+                                    <a class="news-tag" href="{% url 'news:post_list_by_tag' tag.slug %}">
+                                        {{ tag.name }}
+                                    </a>
+                                    {% if not forloop.last %}{% endif %}
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
                 {% endfor %}
@@ -57,65 +67,3 @@
     <script>
     </script>
 {% endblock %}
-
-
-
-
-
-
-{#                    <h2>#}
-{#                        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>#}
-{#                    </h2>#}
-{#    <p class="tags">#}
-{#        Tags:#}
-{#        {% for tag in post.tags.all %}#}
-{#            <a href="{% url 'news:post_list_by_tag' tag.slug %}">#}
-{#                {{ tag.name }}#}
-{#            </a>#}
-{#            {% if not forloop.last %}, {% endif %}#}
-{#        {% endfor %}#}
-{#    </p>#}
-{#                    <p class="date">Published {{ post.publish }} by {{ post.author }}</p>#}
-{#                    {{ post.body|markdown|truncatewords_html:30 }}#}
-
-{#<div>#}
-{#    <div className="news-container">#}
-{#        <div className="container">#}
-{#            {error ? <p>{error.message}</p> : null}#}
-{#            {!isLoading ? (#}
-{#            table.map(result => {#}
-{#            const {id, title, created_date, text, author, photos} = result;#}
-{#            const img = [];#}
-{#            for (let i = 0; i < photos.length; i++) {#}
-{#            img.push(<img src={photos[i]} alt=""/>);#}
-{#            }#}
-{#            return (#}
-{#            <div className={modal && modalIndex=== id ?#}
-{#            "news-card-container news-card-container-open" : "news-card-container"} key={id}>#}
-{#            <div className={modal && modalIndex=== id ?#}
-{#            "news-card news-card-open" : "news-card"} key={id}>#}
-{#            <p className="title">{title}</p>#}
-{#            <span className="news-date">{created_date}</span>#}
-{#            <div className="describe-block">#}
-{#                <pre>Describe: {text}</pre>#}
-{#                <p>{author}</p>#}
-{#            </div>#}
-{#            <picture key={id}>#}
-{#                {img}#}
-{#            </picture>#}
-{##}
-{#            <button className={modal && modalIndex=== id ?#}
-{#            "open" : ""} id={id} onClick={()=>this.handleClick(id)}>#}
-{#            {modal && modalIndex === id ? "Згорнути" : "Розгорнути"}#}
-{#            </button>#}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#    );#}
-{#    })#}
-{#    ) : (#}
-{#    <h3>Loading...</h3>#}
-{#    )}#}
-{#</div>#}
-{#</div>#}
-{#</div>#}
