--- a/src/sass/layouts/_l-news-block.scss
+++ b/src/sass/layouts/_l-news-block.scss
@@ -2,7 +2,16 @@
   width: 100vw;
   min-height: 100vh;
   background-size: cover;
-  padding-top: 100px;
+  padding-top: 70px;
+
+  .filter-form-container {
+    background-color: $main-bg-color;
+    padding: 0 15px 25px;
+
+    label {
+      color: white;
+    }
+  }
 
   h2 {
     margin: 0;
@@ -16,9 +25,10 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
   .news-card-container {
     flex-basis: 33%;
-    height: 250px;
+    height: 300px;
     margin: 0 30px 50px;
     transition: opacity .4s ease-in-out;
 
@@ -28,10 +38,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 250px;
+    height: 300px;
     padding: 30px;
     color: $main-black-text;
-    background-color: white;
+    background:rgba(255,255,255, 0.8);
     transition: background-color .4s ease-in-out, color .4s ease-in-out;
     position: relative;
 
@@ -39,6 +49,7 @@
       font-size: 18px;
       font-weight: bold;
     }
+
     .news-date {
       position: absolute;
       top: -20px;
@@ -48,64 +59,65 @@
       background-color: $main-bg-color;
       transition: background-color .4s ease-in-out, color .4s ease-in-out;
     }
+
     .describe-block {
       height: 250px;
       overflow: hidden;
     }
+
     button {
       position: absolute;
-      width: 100px;
+      width: 110px;
       height: 40px;
       bottom: -15px;
       left: -20px;
-      color: white;
       background-color: $main-bg-color;
       transition: background-color .4s ease-in-out, color .4s ease-in-out;
+
+      a {
+        text-decoration: none;
+        color: white;
+
+      }
     }
+
     picture {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
-      border: 3px solid rgba(0,0,0, 0.6);
+      border: 3px solid rgba(0, 0, 0, 0.6);
 
       img {
         max-width: 250px;
 
       }
     }
-  }
 
-  .news-card-open {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    margin: auto;
-    width: 75vw;
-    height: 75vh;
-    animation: expand 1s;
-    opacity: 1;
-    transition: all .4s ease-in-out;
-    z-index: 10;
-    color: white;
-    background-color: $main-bg-color;
-    .describe-block {
-      height: unset;
-      overflow: visible;
+    .news-tag-container {
+      border-radius: 5px;
+      color: #333;
+      display: inline-block;
+      font-size: 12px;
+      font-weight: bold;
+      margin: 0 5px 0 0;
+      padding: 7px 7px;
+
+      .news-tag {
+        border-radius: 12.5px;
+        background-color: rgb(239, 239, 239);
+        color: rgb(51, 51, 51);
+        padding: 5px 8px;
+        margin-right: 4px;
+        margin-bottom: 4px;
+        font-weight: 700;
+        font-size: 12px;
+        width: 50px;
+
+      }
     }
-    .news-date {
-      color: $main-bg-color;
-      background-color: white;
-      transition: background-color .4s ease-in-out, color .4s ease-in-out;
-    }
-    button {
-      width: 150px;
-      height: 50px;
-      font-size: 22px;
-      color: $main-bg-color;
-      background-color: white;
-      transition: background-color .4s ease-in-out, color .4s ease-in-out;
+
+    a {
+      text-decoration: none;
     }
   }
 }
